# services-webassets

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: webassets.py
nagare/services/: webassets.py
src/nagare/admin/: webassets.py
src/nagare/services/: webassets.py
