[metadata]
name = nagare-services-webassets
author = Net-ng
author_email = alain.poirier@net-ng.com
description = 'nagare-admin' executable
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-webassets
    Tracker = https://github.com/nagareproject/services-webassets/issues

[options]
zip_safe = False
packages = find:
install_requires =
    glob2
    dukpy
    nagare-server

[options.entry_points]
nagare.commands =
    webassets = nagare.admin.webassets:Commands

nagare.commands.webassets =
    list = nagare.admin.webassets:List
    build = nagare.admin.webassets:Build
    clean = nagare.admin.webassets:Clean
    check = nagare.admin.webassets:Check

nagare.services =
    webassets = nagare.services.webassets:WebAssets

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
        nagare/vendor
